[package]
name = "ts3tts"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "TeamSpeak3 Text to Speech Plugin"
repository = "https://github.com/Flakebi/ts3tts"
readme = "README.md"
license = "GPL-2.0"

[lib]
name = "ts3tts"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
lazy_static = "*"
ts3plugin = { path = "../ts3plugin" }
#ts3plugin = "*"
